2007-06-10  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-apply.c: (gnome_meta_theme_set): add some more checks so
	we don't try to strcmp NULL strings (fixes bug #445908)

2007-06-09  Denis Washington  <denisw@svn.gnome.org>

	* theme-thumbnail.c: (generate_gtk_theme_thumbnail):
	Fix the appearance capplet windows not reacting to gtk+ theme changes.

2007-06-07  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (handle_change_signal),
	(gnome_theme_is_writable),
	(gnome_theme_info_register_theme_change):
	* gnome-theme-info.h:
	modify the theme change callback to return more useful
	information and add a function to determine whether a given
	theme is writable

2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* Bonobo_Control_Capplet_generic.oaf.in:
	* wrapper-script.in: remove obsolete files

2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (message_from_child),
	(generate_theme_thumbnail), (generate_theme_thumbnail_async),
	(theme_thumbnail_factory_init):
	* theme-thumbnail.h: remove caching from the thumbnailer since
	all of the current users work around it anyway, and resources
	aren't managed properly

2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (safe_strcmp), (get_data_from_hash_by_name),
	(read_icon_theme), (handle_change_signal), (update_theme_index),
	(gnome_theme_meta_info_compare):
	* gnome-theme-info.h: some more house-keeping

2007-06-06  Jens Granseuer  <jensgr@gmx.net>

	* theme-thumbnail.c: (generate_theme_thumbnail_async):
	* theme-thumbnail.h: add a parameter to circumvent the internal
	thumbnail cache to the asynchronous generator

2007-05-30  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (safe_strcmp), (add_data_to_hash_by_name),
	(handle_change_signal), (update_common_theme_dir_index),
	(gtk2_dir_changed), (keybinding_dir_changed),
	(metacity_dir_changed), (common_theme_dir_changed),
	(common_icon_theme_dir_changed), (top_theme_dir_changed),