@@ -1,5 +1,11 @@
 2007-06-10  Jens Granseuer  <jensgr@gmx.net>
 
+	* gtkrc-utils.c: (gtkrc_get_details), (gtkrc_get_color_scheme):
+	make it possible to skip engine information if we're not interested
+	and fix a warning
+
+2007-06-10  Jens Granseuer  <jensgr@gmx.net>
+
 	* gnome-theme-apply.c: (gnome_meta_theme_set): add some more checks so
 	we don't try to strcmp NULL strings (fixes bug #445908)
 
